RP-1 CORS fix